proyecto3/k8s-manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-system
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: weather-network-policy
  namespace: weather-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: weather-system
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: weather-system
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
